--- a/Module 8.ipynb
+++ b/Module 8.ipynb
@@ -5729,10 +5729,93 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 116,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>userId</th>\n",
+       "      <th>movieId</th>\n",
+       "      <th>rating</th>\n",
+       "      <th>timestamp</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>110</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2015-03-09 22:52:09</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>147</td>\n",
+       "      <td>4.5</td>\n",
+       "      <td>2015-03-09 23:07:15</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1</td>\n",
+       "      <td>858</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>2015-03-09 22:52:03</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1221</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>2015-03-09 22:52:26</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1246</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>2015-03-09 22:52:36</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   userId  movieId  rating           timestamp\n",
+       "0       1      110     1.0 2015-03-09 22:52:09\n",
+       "1       1      147     4.5 2015-03-09 23:07:15\n",
+       "2       1      858     5.0 2015-03-09 22:52:03\n",
+       "3       1     1221     5.0 2015-03-09 22:52:26\n",
+       "4       1     1246     5.0 2015-03-09 22:52:36"
+      ]
+     },
+     "execution_count": 116,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ratings.head()"
+   ]
   }
  ],
  "metadata": {
